游戏任务标记-2017腾讯

--- a/.gitignore
+++ b/.gitignore
@@ -60,3 +60,10 @@ Thumbs.db
 out/
 catalina.base_IS_UNDEFINED/
 
+copyright/
+.name
+compiler.xml
+encodings.xml
+misc.xml
+modules.xml
+workspace.xml
